<resources>
    <string name="app_name">AdniInstagramClone</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="add_post">Add Post</string>
    <string name="notification">Notification</string>
    <string name="profile">Profile</string>
    <string name="search_hint">Search . . .</string>
    <string name="username">Username</string>
    <string name="followers">Followers</string>
    <string name="posts">Posts</string>
    <string name="following">Following</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="atau">Atau</string>
    <string name="fullname">Fullname</string>
    <string name="sign_up">Sign Up</string>
    <string name="change_image">Change Image</string>
    <string name="profile_name">Profile Name</string>
    <string name="bio">Bio</string>
    <string name="logout">Logout</string>
    <string name="delete_account">Delete Account</string>
    <string name="follow">Follow</string>
    <string name="comments">Comments</string>
    <string name="publish">Publish</string>
    <string name="comment_text">Comment text</string>
</resources>